# curator-opensearch

./: .gitignore  Dockerfile  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml  pullrequest.yaml  release.yaml  schedule.yaml
curator/: _version.py  actions.py  cli.py  config_utils.py  indexlist.py  repomgrcli.py  singletons.py  utils.py
curator/cli_singletons/: delete.py
curator/defaults/: client_defaults.py  option_defaults.py  settings.py
docs/asciidoc/: actions.asciidoc  options.asciidoc
examples/: curator.yml
examples/actions/: create_index.yml  reindex.yml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  serviceaccount.yaml
test/integration/: __init__.py  test_alias.py  test_allocation.py  test_cli.py  test_close.py  test_clusterrouting.py  test_count_pattern.py  test_create_index.py  test_datemath.py  test_delete_indices.py  test_delete_snapshots.py  test_envvars.py  test_es_repo_mgr.py  test_forcemerge.py  test_freeze.py  test_integrations.py  test_open.py  test_reindex.py  test_replicas.py  test_restore.py  test_rollover.py  test_shrink.py  test_snapshot.py  test_unfreeze.py
test/unit/: test_action_alias.py  test_action_allocation.py  test_action_close.py  test_action_clusterrouting.py  test_action_create_index.py  test_action_delete_indices.py  test_action_delete_snapshots.py  test_action_forcemerge.py  test_action_indexsettings.py  test_action_open.py  test_action_reindex.py  test_action_replicas.py  test_action_restore.py  test_action_rollover.py  test_action_shrink.py  test_action_snapshot.py  test_class_index_list.py  test_utils.py  (+3 more)
