[metadata]
name = curator-opensearch
description = "Tending your OpenSearch indices"
long_description = file: README.rst
version = attr: curator._version.__version__
author = Uzhinsky
author_email = lspci@mail.ru
url = https://github.com/flant/curator-opensearch
license = Apache License, Version 2.0
keywords = opensearch, time-series, indexed, index-expiry, elasticsearch
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires = 
    voluptuous>=0.12.1
    opensearch-py>=1.0.0
    urllib3>=1.26.5,<2
    requests>=2.26.0
    boto3>=1.18.18
    requests_aws4auth>=1.1.1
    click>=7.0,<8.0
    pyyaml>=5.4.1
    certifi>=2021.5.30
    six>=1.16.0

setup_requires =
    voluptuous>=0.12.1
    opensearch-py>=1.0.0
    urllib3>=1.26.5,<2
    requests>=2.26.0
    boto3>=1.18.18
    requests_aws4auth>=1.1.1
    click>=7.0,<8.0
    pyyaml>=5.4.1
    certifi>=2021.5.30
    six>=1.16.0

packages = curator
include_package_data = True
tests_require =
    mock
    nose
    coverage
    nosexcover

[options.entry_points]
console_scripts = 
    curator = curator.cli:cli
    curator_cli = curator.curator_cli:main
    es_repo_mgr = curator.repomgrcli:repo_mgr_cli

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal=1
